@@ -1,8 +1,12 @@
 === NoNa ===
 == Version 1.9.3 ==
-* Released January 2016
+* Released February 2016
 * Update to copyright year
+* Added `id` to sidebar widget definitions
+* Added sanity check before registering widgets
+* Added `screen-reader-text` required CSS definitions
 
+/** ------------------------------------------------------------------------- */
 == Version 1.9.2 ==
 Changelog: December 27, 2014
 = Code =
